--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 RelativeURLs=true
-###########baseURL = disabled
+baseURL = https://main.dlrve2acyoug9.amplifyapp.com
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Getting Started with Amazon SageMaker Studio"
